fix: project: overflow-x

--- a/src/styles/globals/_boilerplate.scss
+++ b/src/styles/globals/_boilerplate.scss
@@ -7,7 +7,7 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 *,
 *::before,
