--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,7 +4,7 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 *,
